--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level_1.Level_1
-GameDefaultMap=/Game/Maps/Level_1.Level_1
+EditorStartupMap=/Game/Maps/Level_2.Level_2
+GameDefaultMap=/Game/Maps/Level_2.Level_2
+GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowGlobalClipPlane=True
