--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,10 +1,12 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level_2.Level_2
-GameDefaultMap=/Game/Maps/Level_2.Level_2
+EditorStartupMap=/Game/Maps/Level_3.Level_3
+GameDefaultMap=/Game/Maps/Level_3.Level_3
 GlobalDefaultGameMode=/Game/VRTemplate/Blueprints/VRGameMode.VRGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.AllowGlobalClipPlane=True
+r.SkinCache.CompileShaders=True
+r.RayTracing=True
 
